--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -3,8 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:background="#18181A"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".loading_activity">
+    tools:context=".Loading_activity">
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="296dp"
+        android:layout_height="366dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="162dp"
+        android:layout_marginEnd="67dp"
+        android:layout_marginBottom="203dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/black" />
 </androidx.constraintlayout.widget.ConstraintLayout>
