--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -86,7 +86,6 @@
             android:textAllCaps="false"
             android:textColor="#F5F3FF"/>
 
-
         <TextView
             android:id="@+id/txtSignin"
             android:layout_width="wrap_content"
@@ -94,7 +93,6 @@
             android:textColor="#F5F3FF"
             android:text="have Account?  Login"
             android:layout_marginTop="50dp"/>
-
-
+    </LinearLayout>
 
 </LinearLayout>
