--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,9 +63,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#F5F3FF"
-            android:ravity="end"
+            android:gravity="end"
             android:layout_marginTop="10dp"
-            android:text="Froget Password ?"/>
+            android:text="Forget Password ?"/>
 
         <TextView
             android:id="@+id/txtSignin"
@@ -76,7 +76,5 @@
             android:layout_marginTop="50dp"/>
 
     </LinearLayout>
-
-
 
 </LinearLayout>
