--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -8,6 +8,21 @@
     android:layout_height="match_parent"
     tools:context=".Loading_activity">
 
+    <Button
+        android:id="@+id/btnNext2"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:background="@drawable/rounded_button"
+        android:text="Next"
+        android:textAllCaps="false"
+        android:textColor="#F5F3FF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.496" />
+
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="296dp"
