--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#18181A"
+    android:padding="20dp"
     tools:context=".Home">
 
     <LinearLayout
@@ -14,8 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:gravity="end"
-        android:orientation="vertical"
-        android:layout_marginRight="40dp">
+        android:orientation="vertical">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -51,6 +51,7 @@
             app:cardElevation="6dp">
 
             <LinearLayout
+                android:id="@+id/btnMyVehicle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -83,6 +84,7 @@
             app:cardElevation="6dp">
 
             <LinearLayout
+                android:id="@+id/btnNewBooking"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -125,6 +127,7 @@
             app:cardElevation="6dp">
 
             <LinearLayout
+                android:id="@+id/btnMyBooking"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -157,6 +160,7 @@
             app:cardElevation="6dp">
 
             <LinearLayout
+                android:id="@+id/btnSettings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
