--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,7 +63,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#F5F3FF"
-            android:ravity="end"
+            android:gravity="end"
             android:layout_marginTop="10dp"
             android:text="Froget Password ?"/>
 
@@ -72,7 +72,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#F5F3FF"
-            android:text="Don’t have Account?  Signin"
+            android:text="Don’t have Account?  Sign in"
             android:layout_marginTop="50dp"/>
 
     </LinearLayout>
