--- a/app/src/main/res/layout/activity_my_booking.xml
+++ b/app/src/main/res/layout/activity_my_booking.xml
@@ -38,6 +38,7 @@
 
     </LinearLayout>
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -45,6 +46,7 @@
         android:gravity="center"
         android:padding="20dp"
         android:layout_marginTop="30dp">
+
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -54,12 +56,12 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/car2"/>
+                android:src="@drawable/event_accepted2"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="My Vehicles"
+                android:text="My Booking"
                 android:textStyle="bold"
                 android:textColor="#F5F3FF"
                 android:gravity="center"
@@ -75,28 +77,54 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="end"
+        android:gravity=""
         android:paddingTop="20dp">
 
         <LinearLayout
-            android:id="@+id/btnAddNewVehicle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <ImageView
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/plus_math"/>
+                android:layout_height="wrap_content">
 
-            <TextView
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Date :"
+                    android:textColor="#F5F3FF"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" 20xx/xx/xx"
+                    android:textColor="#F5F3FF"
+                    android:textStyle="bold"/>
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Add New Vehicle"
-                android:textColor="#F5F3FF"
-                android:textSize="15dp"
-                android:layout_marginLeft="5dp"
-                android:gravity="center"/>
+                android:layout_marginLeft="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Time :"
+                    android:textColor="#F5F3FF"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" 10:20 A.M"
+                    android:textColor="#F5F3FF"
+                    android:textStyle="bold"/>
+
+            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
