--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -51,7 +51,7 @@
             app:cardElevation="6dp">
 
             <LinearLayout
-                android:id="@+id/btnMyVehicle"
+                android:id="@+id/btnParking"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -67,7 +67,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="My Vehicles"
+                    android:text="Parking"
                     android:textColor="#F5F3FF"
                     android:textStyle="bold"
                     android:textSize="14sp" />
@@ -84,7 +84,7 @@
             app:cardElevation="6dp">
 
             <LinearLayout
-                android:id="@+id/btnNewBooking"
+                android:id="@+id/btnParkingHistory"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -100,7 +100,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="New Booking"
+                    android:text="Parking History"
                     android:textColor="#F5F3FF"
                     android:textStyle="bold"
                     android:textSize="14sp" />
@@ -108,80 +108,80 @@
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="25dp"
-        android:weightSum="2"
-        android:layout_marginTop="-35dp">
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:padding="25dp"-->
+<!--        android:weightSum="2"-->
+<!--        android:layout_marginTop="-35dp">-->
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="5dp"
-            android:layout_weight="1"
-            app:cardBackgroundColor="#FFF"
-            app:cardCornerRadius="12dp"
-            app:cardElevation="6dp">
+<!--        <androidx.cardview.widget.CardView-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginEnd="8dp"-->
+<!--            android:layout_marginBottom="5dp"-->
+<!--            android:layout_weight="1"-->
+<!--            app:cardBackgroundColor="#FFF"-->
+<!--            app:cardCornerRadius="12dp"-->
+<!--            app:cardElevation="6dp">-->
 
-            <LinearLayout
-                android:id="@+id/btnMyBooking"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:background="#7159E3"
-                android:padding="16dp"
-                android:gravity="center">
+<!--            <LinearLayout-->
+<!--                android:id="@+id/btnMyBooking"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="vertical"-->
+<!--                android:background="#7159E3"-->
+<!--                android:padding="16dp"-->
+<!--                android:gravity="center">-->
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/event_accepted"/>
+<!--                <ImageView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:src="@drawable/event_accepted"/>-->
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="My Booking"
-                    android:textColor="#F5F3FF"
-                    android:textStyle="bold"
-                    android:textSize="14sp" />
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="My Booking"-->
+<!--                    android:textColor="#F5F3FF"-->
+<!--                    android:textStyle="bold"-->
+<!--                    android:textSize="14sp" />-->
+<!--            </LinearLayout>-->
+<!--        </androidx.cardview.widget.CardView>-->
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_weight="1"
-            app:cardBackgroundColor="#FFF"
-            app:cardCornerRadius="12dp"
-            app:cardElevation="6dp">
+<!--        <androidx.cardview.widget.CardView-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:layout_weight="1"-->
+<!--            app:cardBackgroundColor="#FFF"-->
+<!--            app:cardCornerRadius="12dp"-->
+<!--            app:cardElevation="6dp">-->
 
-            <LinearLayout
-                android:id="@+id/btnSettings"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="16dp"
-                android:background="#7159E3"
-                android:gravity="center">
+<!--            <LinearLayout-->
+<!--                android:id="@+id/btnSettings"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="vertical"-->
+<!--                android:padding="16dp"-->
+<!--                android:background="#7159E3"-->
+<!--                android:gravity="center">-->
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/settings"/>
+<!--                <ImageView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:src="@drawable/settings"/>-->
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Settings"
-                    android:textColor="#F5F3FF"
-                    android:textStyle="bold"
-                    android:textSize="14sp" />
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-    </LinearLayout>
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="Settings"-->
+<!--                    android:textColor="#F5F3FF"-->
+<!--                    android:textStyle="bold"-->
+<!--                    android:textSize="14sp" />-->
+<!--            </LinearLayout>-->
+<!--        </androidx.cardview.widget.CardView>-->
+<!--    </LinearLayout>-->
 
 </LinearLayout>
