--- a/app/src/main/res/layout/activity_parking_history.xml
+++ b/app/src/main/res/layout/activity_parking_history.xml
@@ -38,7 +38,6 @@
 
     </LinearLayout>
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -46,7 +45,6 @@
         android:gravity="center"
         android:padding="20dp"
         android:layout_marginTop="30dp">
-
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -68,45 +66,25 @@
                 android:layout_marginLeft="10dp"
                 android:textSize="20dp"/>
 
-
         </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity=""
-        android:paddingTop="20dp">
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:id="@+id/parkingHistoryContainer"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:paddingTop="20dp">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Date :"
-                    android:textColor="#F5F3FF"
-                    android:textStyle="bold"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=" 20xx/xx/xx"
-                    android:textColor="#F5F3FF"
-                    android:textStyle="bold"/>
-
-            </LinearLayout>
+            <!-- Dynamic entries will be added here programmatically -->
 
         </LinearLayout>
 
-    </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
